--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
     "db:reset": "tsx scripts/reset.ts && npm run db:migrate",
-    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts"
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
+    "db:seed": "tsx scripts/seeds/index.ts"
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
