--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.4",
+    "@types/axios": "^0.9.36",
     "@types/next-auth": "^3.13.0",
     "animate.css": "^4.1.1",
     "auth": "^1.2.3",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
@@ -39,10 +42,11 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.0",
     "shadcn": "^2.4.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.19.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
